# cedarpy

./: .ai-errors-log.md  .gitignore  README.md  black.sh  make.sh  pyproject.toml  requirements.txt  setup.py
cedar/: __init__.py  init.py
cedar/draw/: __init__.py  color_list.py  draw.py  plt.py  put_text.py  tools.py
cedar/draw/test/: _put_text.ipynb
cedar/feature/: __init__.py  _basic_features.py  asm.py  asm_example.py  asm_trainer.py  ml_joblib.py  trainable_segmentation.py
cedar/feature/test/: match_feature.ipynb
cedar/hub/: clint.py
cedar/image/: __init__.py  contours.py  imread_imwrite.py  io.py  iou.py  tools.py
cedar/image/test/: canny_distance_filter.ipynb  per_1.ipynb  test_iou.ipynb
cedar/label/: __init__.py  check_xml.py  create_xml.py  read_xml.py
cedar/pdx/: __init__.py  ocr.py
cedar/supper/: __init__.py  tools.py
cedar/utils/: __init__.py  config.py  config.yaml  dict2obj.py  logger.py  logging_init.py  s_print.py  tools.py
cedar/utils/test/: config.json  test.ipynb  (+4 more)
feature/__model/: test.ipynb
feature/beiwnaglupro/: main.py  test.py
feature/mcp/: README.md  cedar_ai_integration_proposal.py  cedar_analysis.py  cedar_architecture_recommendations.md  cedar_demo.py  cedar_implementation_guide.py  cedar_library_summary.md  example_usage.py  image_binarization.py  requirements.txt  smart_opencv_mcp.py  start_mcp.py  test_smart_opencv_mcp.py
feature/txt2img/: test.py
feature/可视化配方/: app.py  init.py
feature/图像特征严重度回归模型/: defect_regression.py  main.py  t1.py
feature/插件模式/: config.json  main.py
feature/脚本/: pdf压缩.py  去重.py
(+29 files in other folders)
