[project]
name = "cedar"

[tool.pyright]
extraPaths = ["."]
ignore = [
    "**/__init__.py",
]

[tool.ruff]
exclude = [
    "dist"
]
indent-width = 4
line-length = 140
target-version = "py38"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I001"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
